# gitfred

./: .gitignore  LICENSE  README.md  gitfred.cabal  stack.yaml
app/: Main.hs
src/Gitfred/: Request.hs
